# Active-Memory

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PHILOSOPHY.md  README.md  TODO.md  active_agent.py  benchmark.py  benchmark_v2.py  benchmark_v3.py  bucket.py  conductor.py  conftest.py  curator.py  curator_v1.py  observer.py  observer_v1.py  pyproject.toml  pytest.ini  reporter.py  requirements.txt  retrieval.py  test_active_agent.py  test_bucket.py  test_conductor.py  test_curator.py  test_librarian.py  test_observer.py  test_ollama.py  test_reporter.py  test_retrieval.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
active_memory/: __init__.py  active_agent.py  bucket.py  config.py  curator.py  librarian.py  monitor.py  observer.py  pipeline.py  retrieval.py  retrieval_v1.py  scheduler.py
active_memory/backends/: __init__.py  anthropic_backend.py  base.py  huggingface_backend.py  ollama_backend.py
archive/: __init__.py  active_agent_v1.py  conductor.py  librarian.py  reporter.py
benchmarks/: benchmark_niah.py  benchmark_v1.py  benchmark_v2.py  benchmark_v4.py  generate_chat.py
benchmarks/contexts/: architecture_v4.py
benchmarks/locomo/: benchmark_locomo.py  benchmark_locomo_all.py  loader.py
chroma_db_benchmark_v4/: chroma.sqlite3
chroma_db_smoke/: chroma.sqlite3
tests/: conftest.py  test_active_agent.py  test_active_agent_unit.py  test_backends.py  test_bucket.py  test_bucket_topic_tree.py  test_bucket_unit.py  test_config.py  test_curator.py  test_curator_unit.py  test_integration.py  test_librarian.py  test_monitor.py  test_observer.py  test_observer_unit.py  test_pipeline.py  test_pipeline_unit.py  test_retrieval.py  test_retrieval_unit.py  test_scheduler_unit.py
tools/: TODO.md
tools/inspector/: server.py
tools/inspector/static/: index.html
