[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "active-memory"
version = "0.1.0"
description = "A drop-in context memory layer for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "chromadb>=1.0,<2.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
anthropic   = ["anthropic>=0.40,<1.0"]
ollama      = ["ollama>=0.4,<1.0"]
huggingface = ["huggingface_hub>=1.0,<2.0"]
all         = [
    "anthropic>=0.40,<1.0",
    "ollama>=0.4,<1.0",
    "huggingface_hub>=1.0,<2.0",
    "fastapi>=0.110,<1.0",
    "uvicorn>=0.30,<1.0",
]
benchmarks  = ["requests>=2.31,<3.0"]
inspector   = ["fastapi>=0.110,<1.0", "uvicorn>=0.30,<1.0"]
dev         = ["pytest>=8.0,<9.0", "pytest-cov>=5.0,<7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["active_memory*"]

[tool.coverage.run]
source = ["active_memory"]
omit = [
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true
skip_covered = false
